docs: 更新README文档并修复_url.html中的链接变量
更新README文档，添加详细的功能说明、快速开始指南和进阶配置步骤，使项目文档更加完整和易于理解。同时修复_url.html中的硬编码链接，改为使用actionsUrl变量。

--- a/_url.html
+++ b/_url.html
@@ -214,7 +214,7 @@
                     const p2 = document.createElement('p');
                     p2.appendChild(document.createTextNode('您也可以前往 '));
                     const link1 = document.createElement('a');
-                    link1.href = "https://github.com/afoim/Static_Redirect_Group/actions";
+                    link1.href = actionsUrl;
                     link1.target = "_blank";
                     link1.textContent = "构建状态页面";
                     p2.appendChild(link1);
